--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ pandas>=1.5.0              # Data analysis
 numpy>=1.24.0              # Numerical computing
 jupyter>=1.0.0             # Jupyter Notebook support
 nbformat>=5.7.0            # Notebook creation and management
-PyYAML>=6.0                # YAML configuration files for extensions
+PyYAML==6.0.1                # YAML configuration files for extensions
 
 # Text analysis (commonly used by LLMs)
 nltk>=3.8                  # Natural language processing
@@ -31,3 +31,4 @@ textstat>=0.7.3            # Readability metrics
 # statsmodels             # Advanced statistics
 # scikit-learn            # Machine learning
 # plotly                  # Interactive visualization
+chroma-hnswlib==0.7.3
