--- a/requirements.txt
+++ b/requirements.txt
@@ -33,3 +33,7 @@ tabulate>=0.9.0            # Professional ASCII table formatting
 # scikit-learn            # Machine learning
 # plotly                  # Interactive visualization
 chroma-hnswlib==0.7.3
+
+# Google Cloud dependencies for Vertex AI
+google-cloud-aiplatform>=1.104.0
+google-auth>=2.40.0
