--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ anthropic>=0.7.0           # Direct Anthropic API access
 requests>=2.28.0           # HTTP requests for literature search APIs
 click>=8.0.0               # CLI interface for Discernus
 redis>=6.2.0               # Pub-sub coordination for Discernus
+minio>=7.1.0               # Object storage client for artifact caching
 
 # Scientific computing (when needed)
 pandas>=1.5.0              # Data analysis
