--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,10 +31,15 @@ dependencies = [
     # Core Discernus dependencies (ultra-thin approach)
     "GitPython>=3.1.0",           # Conversation logging with git transparency
     "python-dotenv>=1.0.0",       # Environment configuration
+    "click>=8.0.0",               # CLI framework
     
     # LLM Gateway dependencies (minimal)
     "litellm>=1.73.0",           # Multi-provider LLM access
     "requests>=2.28.0",          # HTTP requests for LLM APIs
+    
+    # Redis coordination
+    "redis>=4.0.0",              # Redis client
+    "PyYAML>=6.0.0",             # YAML parsing for configurations
     
     # Academic/Scientific computing (when needed)
     "numpy>=1.24.0",             # Numerical computing
@@ -64,6 +69,9 @@ Homepage = "https://github.com/discernus/discernus"
 Repository = "https://github.com/discernus/discernus.git"
 Issues = "https://github.com/discernus/discernus/issues"
 
+[project.scripts]
+discernus = "discernus.cli:main"
+
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["discernus*"]
@@ -81,7 +89,4 @@ testpaths = ["discernus/tests"]
 python_files = ["test_*.py", "*_test.py"]
 python_classes = ["Test*"] 
 python_functions = ["test_*"]
-addopts = "-v"
-
-[project.scripts]
-discernus-demo = "discernus.demo.demo:cli_main" 
+addopts = "-v" 
