Add synthesis verbosity analysis & fixes
Former-commit-id: b5d04df2c2fac63a8e296d6ce332eec7741e64d0

--- a/discernus/agents/EnhancedAnalysisAgent/prompt.yaml
+++ b/discernus/agents/EnhancedAnalysisAgent/prompt.yaml
@@ -48,4 +48,4 @@ template: |
   **DOCUMENTS:**
   {documents}
 
-  Begin enhanced analysis now. Remember, the entire output must be a single JSON object, starting with `{` and ending with `}`. 
+  Begin enhanced analysis now. Remember, the entire output must be a single JSON object, starting with `{{` and ending with `}}`. 
