Plan: THIN Code-Generated Synthesis Architecture
- Created comprehensive implementation plan for breakthrough synthesis architecture
- Addresses fundamental scalability limits of current monolithic synthesis
- 4-agent separation of concerns: CodeGen → Execute → Curate → Synthesize
- Key innovation: post-computation evidence curation based on actual statistical results
- Phase 1: Standalone prototype validation
- Phase 2: Feature branch integration
- Phase 3: Quality validation and comparative evaluation
- GitHub issues #166-174 created for tracking
- Potentially patent-worthy architectural approach


Former-commit-id: 7dcb632bf7bafe4d2e61921da8274e4b40b86888

--- a/discernus/agents/EnhancedAnalysisAgent/prompt.yaml
+++ b/discernus/agents/EnhancedAnalysisAgent/prompt.yaml
@@ -16,7 +16,7 @@ template: |
   ```
 
   **IMPORTANT**: 
-  1. Replace {artifact_id} with the document's hash
+  1. Keep {artifact_id} exactly as shown - DO NOT replace it with actual hash values
   2. The 'aid' column MUST be first in both CSVs
   3. The 'dimension' column MUST be second in the evidence CSV
   4. Follow the framework's output_contract for all other columns and data
