--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ requests>=2.28.0           # HTTP requests for literature search APIs
 click>=8.0.0               # CLI interface for Discernus
 redis>=6.2.0               # Pub-sub coordination for Discernus
 minio>=7.1.0               # Object storage client for artifact caching
-libcst>=1.0.0              # Concrete syntax tree parsing for LLM code sanitization
+# libcst>=1.0.0              # Concrete syntax tree parsing for LLM code sanitization (DEPRECATED - no longer needed)
 
 # Scientific computing (when needed)
 pandas>=1.5.0              # Data analysis
