--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,31 @@
 # Ultra-thin dependencies following "strategically thin software" philosophy
 
-# Core infrastructure - minimal dependencies
-python-dotenv>=0.19.0      # Environment configuration
-gitpython>=3.1.0           # Conversation logging with git transparency
-litellm>=1.0.0             # Rate limiting, retries, and provider management
-anthropic>=0.7.0           # Direct Anthropic API access
-requests>=2.28.0           # HTTP requests for literature search APIs
-click>=8.0.0               # CLI interface for Discernus
-redis>=6.2.0               # Pub-sub coordination for Discernus
-minio>=7.1.0               # Object storage client for artifact caching
-# libcst>=1.0.0              # Concrete syntax tree parsing for LLM code sanitization (DEPRECATED - no longer needed)
+# Core dependencies
+python-dotenv>=0.19.0
+gitpython>=3.1.0
+litellm>=1.0.0
+anthropic>=0.7.0
+requests>=2.28.0
+click>=8.0.0
+redis>=6.2.0
+minio>=7.1.0
 
-# Scientific computing (when needed)
-pandas>=1.5.0              # Data analysis
-numpy>=1.24.0              # Numerical computing
-jupyter>=1.0.0             # Jupyter Notebook support
-nbformat>=5.7.0            # Notebook creation and management
-PyYAML==6.0.1                # YAML configuration files for extensions
+# Data processing and analysis
+pandas>=1.5.0
+numpy>=1.24.0
+scipy>=1.10.0
 
-# Text analysis (commonly used by LLMs)
-nltk>=3.8                  # Natural language processing
-textblob>=0.15.3           # Sentiment analysis and text processing
+# Jupyter and notebook support
+jupyter>=1.0.0
+nbformat>=5.7.0
 
-# Philosophy: Discernus intentionally has minimal core dependencies
-# to reduce complexity and maintain thin software philosophy
+# Configuration and serialization
+PyYAML==6.0.1
 
-# Optional dependencies (install separately if needed):
-# openai>=1.0.0           # OpenAI API access
-# pytest                  # Testing framework
-# black                   # Code formatting
-# statsmodels             # Advanced statistics
-# scikit-learn            # Machine learning
-# plotly                  # Interactive visualization
+# Text processing and NLP
+nltk>=3.8
+textblob>=0.15.3
 
-# Google Cloud dependencies for Vertex AI
+# Google Cloud Platform (Vertex AI)
 google-cloud-aiplatform>=1.104.0
 google-auth>=2.40.0
