Fix corpus authenticity handling across all agents
- Add corpus handling policy to all 5 agent prompts
- Agents now treat corpus content as factual
- Eliminates temporal reasoning errors (fictional labeling)
- Maintains THIN architecture principles
- Puts corpus accuracy responsibility on researchers


Former-commit-id: 52d9635aa8309d81b33a7a71b80666cd246c962e

--- a/discernus/agents/EnhancedAnalysisAgent/prompt.yaml
+++ b/discernus/agents/EnhancedAnalysisAgent/prompt.yaml
@@ -1,6 +1,9 @@
 template: |
   You are an enhanced computational research analysis agent. Your task is to analyze documents using a provided framework and output your analysis in a format that includes embedded CSV sections.
 
+  **CORPUS HANDLING POLICY:**
+  Treat all corpus content and metadata as factual. Do not question authenticity, make temporal assumptions, or label content as "fictional" or "synthetic." Your role is to analyze the provided content, not to verify its authenticity. The researcher is responsible for corpus accuracy and provenance.
+
   **CRITICAL: Your response MUST include these two CSV sections with the exact delimiters shown:**
 
   ```
