--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,8 @@ nbformat>=5.7.0
 
 # Configuration and serialization
 PyYAML==6.0.1
+pydantic>=2.0.0
+pydantic-settings>=2.0.0
 
 # Text processing and NLP
 nltk>=3.8
