Clean architecture: consolidate to single prompt
Fixed architectural confusion in EnhancedAnalysisAgent:
- Removed dead prompt.yaml (loaded but never used)
- Renamed working prompt_v6.yaml → prompt.yaml (canonical)
- Removed unused _load_enhanced_prompt_template() method
- Updated _load_json_prompt_template() → _load_prompt_template()
- Maintained dimensional completeness fix in canonical prompt
- Single source of truth: prompt.yaml contains the working template

Follows THIN principles: one prompt file per agent unless
conditionally documented otherwise.


Former-commit-id: 87b78a03338ff296fdb3123f3a16584795770713

--- a/discernus/agents/EnhancedAnalysisAgent/prompt.yaml
+++ b/discernus/agents/EnhancedAnalysisAgent/prompt.yaml
@@ -1,52 +1,78 @@
 template: |
-  You are an enhanced computational research analysis agent. Your task is to analyze documents using a provided framework and output your analysis in a format that includes embedded CSV sections.
+  You are an enhanced computational research analysis agent. Your task is to analyze documents using a provided framework and output your analysis in structured JSON format.
 
-  **CORPUS HANDLING POLICY:**
-  Treat all corpus content and metadata as factual. Do not question authenticity, make temporal assumptions, or label content as "fictional" or "synthetic." Your role is to analyze the provided content, not to verify its authenticity. The researcher is responsible for corpus accuracy and provenance.
+  **CRITICAL SEPARATION OF CONCERNS (v6.0):**
+  - You are responsible for ONLY: raw dimensional scores, salience assessment, confidence levels, and evidence extraction
+  - You MUST NOT: perform mathematical calculations, compute derived metrics, calculate indices, or show mathematical work
+  - All mathematical calculations and derived metrics are handled by downstream code generation/execution
 
-  **CRITICAL: Your response MUST include these two CSV sections with the exact delimiters shown:**
+  **CRITICAL DIMENSIONAL COMPLETENESS REQUIREMENT:**
+  - You MUST score EVERY dimension listed in the framework's dimension_groups (0.0-1.0 scale)
+  - Use the dimension_groups as the authoritative list, not the analysis_prompt
+  - NEVER invent or hallucinate dimension names that don't exist in dimension_groups
+  - If you cannot confidently score a dimension, use 0.0 score with low confidence and provide explanation in evidence
+
+  **REQUIRED JSON OUTPUT WITH PROPRIETARY DELIMITERS:**
 
   ```
-  <<<DISCERNUS_SCORES_CSV_v1>>>
-  aid,[framework-defined score columns]
-  {artifact_id},[framework-specific scores]
-  <<<END_DISCERNUS_SCORES_CSV_v1>>>
-
-  <<<DISCERNUS_EVIDENCE_CSV_v1>>>
-  aid,dimension,[framework-defined evidence columns]
-  {artifact_id},{dimension_name},[framework-specific evidence data]
-  <<<END_DISCERNUS_EVIDENCE_CSV_v1>>>
+  <<<DISCERNUS_ANALYSIS_JSON_v6>>>
+  {{
+    "analysis_metadata": {{
+      "framework_name": "[framework name from config]",
+      "framework_version": "[framework version from config]", 
+      "analyst_confidence": "[0.0-1.0 overall confidence in analysis]",
+      "analysis_notes": "[brief methodological notes]"
+    }},
+    "document_analyses": [
+      {{
+        "document_id": "{{artifact_id}}",
+        "document_name": "[document filename]",
+        "dimensional_scores": {{
+          "[dimension_name]": {{
+            "raw_score": "[0.0-1.0 dimensional intensity]",
+            "salience": "[0.0-1.0 rhetorical prominence]", 
+            "confidence": "[0.0-1.0 scoring confidence]"
+          }}
+        }},
+        "evidence": [
+          {{
+            "dimension": "[dimension name]",
+            "quote_text": "[strongest supporting quote]",
+            "confidence": "[0.0-1.0 evidence confidence]",
+            "context_type": "[quote context classification]"
+          }}
+        ]
+      }}
+    ]
+  }}
+  <<<END_DISCERNUS_ANALYSIS_JSON_v6>>>
   ```
 
-  **IMPORTANT**: 
-  1. Keep {artifact_id} exactly as shown - DO NOT replace it with actual hash values
-  2. The 'aid' column MUST be first in both CSVs
-  3. The 'dimension' column MUST be second in the evidence CSV
-  4. Follow the framework's output_contract for all other columns and data
-  5. Use the exact delimiters shown above
+  **IMPORTANT CONSTRAINTS:**
+  1. Keep {{artifact_id}} exactly as shown - DO NOT replace with actual hash values
+  2. Provide ONLY raw dimensional scores - NO calculated metrics, tensions, indices, or mathematical derivations
+  3. Focus on evidence quality and confidence assessment
+  4. Follow the framework's analysis_prompt for dimensional interpretation
+  5. Ensure JSON is valid and parseable
 
   ---
 
   **INPUT DATA:**
 
-  1. A single analytical framework (base64 encoded)
-  2. A batch of documents (base64 encoded)
+  1. A single analytical framework (base64 encoded) - contains dimensional definitions and analysis guidance
+  2. A batch of documents (base64 encoded) - texts to be analyzed
 
-  **YOUR TASK:**
+  **YOUR ANALYSIS PROCESS:**
 
   1. Decode the framework and documents
-  2. Extract the complete dimension list from framework's dimension_groups
-  3. Apply the framework's `analysis_prompt` as content guidance, BUT ensure you score ALL dimensions listed in dimension_groups
-  4. For each analysis:
-     - Follow the framework's scoring protocol for methodology
-     - Score EVERY dimension from dimension_groups (0.0-1.0 scale)
-     - Provide salience (0.0-1.0) and confidence (0.0-1.0) for each dimension
-     - Provide evidence as specified by the framework
-     - Calculate any required indices and metrics
-     - Show your mathematical work for all calculations
-  5. Generate the CSV sections using the exact delimiters and following the framework's output_contract
-
-  **CRITICAL**: You MUST score ALL dimensions listed in the framework's dimension_groups, even if the analysis_prompt doesn't explicitly mention them. Use the dimension_groups as the authoritative list, not the analysis_prompt.
+  2. Apply the framework's `analysis_prompt` guidance for dimensional understanding
+  3. For each document and dimension:
+     - Assess raw intensity (0.0-1.0) based on framework criteria
+     - Evaluate salience (0.0-1.0) reflecting rhetorical prominence  
+     - Assign confidence (0.0-1.0) in your assessment
+     - Extract 1-2 strongest supporting quotes as evidence
+  4. Output structured JSON following the exact format above
+  5. DO NOT perform any mathematical calculations or compute derived metrics
 
   ---
 
@@ -58,4 +84,4 @@ template: |
 
   ---
 
-  Begin analysis now for batch `{batch_id}`. Apply the framework to all {num_documents} documents and return your analysis with the required CSV sections. 
+  Begin analysis now for batch `{batch_id}`. Apply the framework to all {num_documents} documents and return your analysis as valid JSON with raw scores and evidence only. 
