--- a/discernus/agents/sequential_synthesis/prompts/synthesis_prompts.yaml
+++ b/discernus/agents/sequential_synthesis/prompts/synthesis_prompts.yaml
@@ -58,22 +58,49 @@ step_definitions:
   framework_fit_assessment:
     query_generation_task: null # This step does not require RAG queries
     synthesis_task: |
-      Analyze the framework's performance using the framework_fit_assessment data provided in the statistical results.
+      Analyze the framework's performance using the raw statistical results provided in the context. Create a "Framework Fit Assessment" section based on the following tiered methodology and rules.
 
-      **Primary Task:** 
-      - Review the "framework_fit_assessment" section in the statistical data
-      - Report the assessment tier (Gold/Silver/Bronze) and framework fit conclusion
-      - Explain what statistical evidence supports this assessment
-      - If Gold Standard: Discuss both ANOVA significance and reliability measures
-      - If Silver Standard: Focus on measurement reliability and consistency  
-      - If Bronze Standard: Analyze descriptive variance patterns as fit proxies
+      **1. Determine Assessment Tier:**
+      - If 'anova_summary' and 'reliability_summary' are present, use the "Gold Standard".
+      - If only 'reliability_summary' is present, use the "Silver Standard".
+      - If only 'descriptive_summary' is present, use the "Bronze Standard".
+      - If none are present, state that the assessment could not be performed due to insufficient data.
 
-      **Output Format:**
-      Create a "Framework Fit Assessment" section that includes:
-      1. Assessment Tier and overall conclusion
-      2. Supporting statistical evidence with specific metrics
-      3. Interpretation of what this means for the framework's validity
-      4. Any limitations or caveats based on available data
+      **2. Gold Standard Assessment (ANOVA + Reliability):**
+      - For each dimension in 'reliability_summary', categorize its reliability based on Cronbach's Alpha:
+        - "Excellent": alpha >= 0.9
+        - "Good": alpha >= 0.8
+        - "Acceptable": alpha >= 0.7
+        - "Questionable": alpha >= 0.6
+        - "Poor": alpha < 0.6
+      - For each dimension in 'anova_summary', note if it is statistically significant (p < 0.05).
+      - Create a table categorizing each dimension's fit:
+        - "Excellent Fit": 'Excellent' or 'Good' reliability AND statistically significant.
+        - "Good Fit": 'Acceptable' reliability AND statistically significant.
+        - "Marginal Fit": 'Questionable' reliability OR not statistically significant.
+        - "Poor Fit": 'Poor' reliability.
+      - Calculate the percentage of dimensions with "Good Fit" or better.
+      - Write a summary of the framework's strengths (dimensions with excellent fit) and limitations (dimensions with poor or marginal fit).
+
+      **3. Silver Standard Assessment (Reliability Only):**
+      - Categorize each dimension's reliability as in the Gold Standard.
+      - Create a summary of the reliability distribution (e.g., "5 dimensions have Excellent reliability, 3 have Good...").
+      - Write a conclusion about the framework's internal consistency. Note the limitation that statistical significance was not assessed.
+
+      **4. Bronze Standard Assessment (Descriptive Stats Only):**
+      - For each dimension in 'descriptive_summary', calculate the Coefficient of Variation (CV) = (Std Dev / Mean).
+      - Categorize the dimension's score variance:
+        - "Good Variance": CV >= 0.3
+        - "Moderate Variance": CV >= 0.2
+        - "Low Variance": CV < 0.2
+      - Write a summary of the variance distribution.
+      - State that this is a preliminary assessment and that the framework appears to discriminate between texts but requires more rigorous testing.
+
+      **5. Final Output Generation:**
+      - Create a markdown section titled "Framework Fit Assessment".
+      - Clearly state the assessment tier used.
+      - Present the analysis, tables, and summaries as described in the rules above.
+      - Conclude with a clear statement about the framework's overall fit for the corpus and any recommendations for future validation.
 
   final_integration:
     query_generation_task: null # This step does not require RAG queries
